--- a/Localization/Resources/Translations.en-US.resx
+++ b/Localization/Resources/Translations.en-US.resx
@@ -24,4 +24,82 @@
     <data name="LocLanguageChanged" xml:space="preserve">
         <value>Language changed to English</value>
     </data>
+    <data name="LocMenuTools" xml:space="preserve">
+        <value>Tools</value>
+    </data>
+    <data name="LocMenuAddAccount" xml:space="preserve">
+        <value>Add an account</value>
+    </data>
+    <data name="LocMenuLanguage" xml:space="preserve">
+        <value>Language</value>
+    </data>
+    <data name="LocMenuChangeTitle" xml:space="preserve">
+        <value>Change title</value>
+    </data>
+    <data name="LocMenuReauthenticate" xml:space="preserve">
+        <value>Reauthenticate</value>
+    </data>
+    <data name="LocMenuRefresh" xml:space="preserve">
+        <value>Refresh information</value>
+    </data>
+    <data name="LocMenuRemove" xml:space="preserve">
+        <value>Remove</value>
+    </data>
+    <data name="LocWebLoginButton" xml:space="preserve">
+        <value>this button</value>
+    </data>
+    <data name="LocWebLoginLabel" xml:space="preserve">
+        <value>Please, authenticate and click</value>
+    </data>
+    <data name="LocWebLoginAuthentication" xml:space="preserve">
+        <value>Authentication</value>
+    </data>
+    <data name="LocChangeTitleHeader" xml:space="preserve">
+        <value>Change title:</value>
+    </data>
+    <data name="LocChangeTitleHint" xml:space="preserve">
+        <value>Custom title (optional)</value>
+    </data>
+    <data name="LocDialogAccept" xml:space="preserve">
+        <value>ACCEPT</value>
+    </data>
+    <data name="LocDialogCancel" xml:space="preserve">
+        <value>CANCEL</value>
+    </data>
+    <data name="LocAddAccountHeader" xml:space="preserve">
+        <value>New account:</value>
+    </data>
+    <data name="LocAddAccountLoginHint" xml:space="preserve">
+        <value>Login / email</value>
+    </data>
+    <data name="LogAddAccountPassword" xml:space="preserve">
+        <value>Password</value>
+    </data>
+    <data name="LocRequiredField" xml:space="preserve">
+        <value>Field is required</value>
+    </data>
+    <data name="LocGameHandleNotFound" xml:space="preserve">
+        <value>Running game instances not found</value>
+    </data>
+    <data name="LocGameHandleSelectionHeader" xml:space="preserve">
+        <value>Select game instance:</value>
+    </data>
+    <data name="LocCheckInAlready" xml:space="preserve">
+        <value>Already claimed check-in reward</value>
+    </data>
+    <data name="LocCheckInReward" xml:space="preserve">
+        <value>Reward claimed: $1 x$2</value>
+    </data>
+    <data name="LocAllAccountsRefreshed" xml:space="preserve">
+        <value>Accounts information refreshed</value>
+    </data>
+    <data name="LocAccountRefreshed" xml:space="preserve">
+        <value>Account "$1" information refreshed</value>
+    </data>
+    <data name="LocAuthenticationSuccessful" xml:space="preserve">
+        <value>Account succesfully authenticated!</value>
+    </data>
+    <data name="LocAuthenticationError" xml:space="preserve">
+        <value>Error authenticating account</value>
+    </data>
 </root>
