--- a/Localization/Resources/Translations.resx
+++ b/Localization/Resources/Translations.resx
@@ -24,4 +24,82 @@
     <data name="LocLanguageChanged" xml:space="preserve">
         <value />
     </data>
+    <data name="LocMenuTools" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocMenuAddAccount" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocMenuLanguage" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocMenuChangeTitle" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocMenuReauthenticate" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocMenuRemove" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocMenuRefresh" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocWebLoginButton" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocWebLoginLabel" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocWebLoginAuthentication" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocChangeTitleHeader" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocChangeTitleHint" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocDialogAccept" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocDialogCancel" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocAddAccountHeader" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocAddAccountLoginHint" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LogAddAccountPassword" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocRequiredField" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocGameHandleNotFound" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocGameHandleSelectionHeader" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocCheckInAlready" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocCheckInReward" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocAllAccountsRefreshed" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocAccountRefreshed" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocAuthenticationSuccessful" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocAuthenticationError" xml:space="preserve">
+        <value />
+    </data>
 </root>
