--- a/HuTaoHelper.Core/Localization/Translations.resx
+++ b/HuTaoHelper.Core/Localization/Translations.resx
@@ -111,4 +111,7 @@
     <data name="LocMenuAutomationDailyCheckIn" xml:space="preserve">
         <value />
     </data>
+    <data name="LocMenuExit" xml:space="preserve">
+        <value />
+    </data>
 </root>
