--- a/HuTaoHelper.Core/Localization/Translations.resx
+++ b/HuTaoHelper.Core/Localization/Translations.resx
@@ -114,4 +114,16 @@
     <data name="LocMenuExit" xml:space="preserve">
         <value />
     </data>
+    <data name="LocMenuNotificationTargets" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocDialogAdd" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocAddNotificationTargetHeader" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocType" xml:space="preserve">
+        <value />
+    </data>
 </root>
