Add notification target form and fixes

--- a/HuTaoHelper.Core/Localization/Translations.en-US.resx
+++ b/HuTaoHelper.Core/Localization/Translations.en-US.resx
@@ -123,7 +123,13 @@
     <data name="LocAddNotificationTargetHeader" xml:space="preserve">
         <value>Add notification target</value>
     </data>
-    <data name="LocType" xml:space="preserve">
-        <value>Type</value>
+    <data name="LocNotificationTelegramBotToken" xml:space="preserve">
+        <value>Bot token</value>
+    </data>
+    <data name="LocNotificationTelegramChatId" xml:space="preserve">
+        <value>Chat id</value>
+    </data>
+    <data name="LocWrongIntFormat" xml:space="preserve">
+        <value>Wrong number format</value>
     </data>
 </root>
