--- a/HuTaoHelper.Core/Localization/Translations.resx
+++ b/HuTaoHelper.Core/Localization/Translations.resx
@@ -123,7 +123,13 @@
     <data name="LocAddNotificationTargetHeader" xml:space="preserve">
         <value />
     </data>
-    <data name="LocType" xml:space="preserve">
+    <data name="LocNotificationTelegramBotToken" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocNotificationTelegramChatId" xml:space="preserve">
+        <value />
+    </data>
+    <data name="LocWrongIntFormat" xml:space="preserve">
         <value />
     </data>
 </root>
