--- a/HuTaoHelper.Core/Localization/Translations.ru-RU.resx
+++ b/HuTaoHelper.Core/Localization/Translations.ru-RU.resx
@@ -123,7 +123,13 @@
     <data name="LocAddNotificationTargetHeader" xml:space="preserve">
         <value>Добавить цель уведомления</value>
     </data>
-    <data name="LocType" xml:space="preserve">
-        <value>Тип</value>
+    <data name="LocNotificationTelegramBotToken" xml:space="preserve">
+        <value>Токен бота</value>
+    </data>
+    <data name="LocNotificationTelegramChatId" xml:space="preserve">
+        <value>Id чата</value>
+    </data>
+    <data name="LocWrongIntFormat" xml:space="preserve">
+        <value>Неправильный формат числа</value>
     </data>
 </root>
