--- a/HuTaoHelper.Core/Localization/Translations.uk-UA.resx
+++ b/HuTaoHelper.Core/Localization/Translations.uk-UA.resx
@@ -123,7 +123,13 @@
     <data name="LocAddNotificationTargetHeader" xml:space="preserve">
         <value>Додати мету повідомлення</value>
     </data>
-    <data name="LocType" xml:space="preserve">
-        <value>Тип</value>
+    <data name="LocNotificationTelegramBotToken" xml:space="preserve">
+        <value>Токен бота</value>
+    </data>
+    <data name="LocNotificationTelegramChatId" xml:space="preserve">
+        <value>Id чату</value>
+    </data>
+    <data name="LocWrongIntFormat" xml:space="preserve">
+        <value>Неправильний формат числа</value>
     </data>
 </root>
