--- a/HuTaoHelper.Core/Localization/Translations.ru-RU.resx
+++ b/HuTaoHelper.Core/Localization/Translations.ru-RU.resx
@@ -147,4 +147,10 @@
     <data name="LocNotificationRemoved" xml:space="preserve">
         <value>Уведомление "$1" удалено</value>
     </data>
+    <data name="LocMenuChangeNotificationTarget" xml:space="preserve">
+        <value>Изменить цель уведомлений</value>
+    </data>
+    <data name="LocDialogClear" xml:space="preserve">
+        <value>ОЧИСТИТЬ</value>
+    </data>
 </root>
